force-app/main/default/objects/Tripslog__c/fields/Deactivation_Flow__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deactivation Flow</description>
    <inlineHelpText>Deactivation Flow</inlineHelpText>
    <label>Deactivation Flow</label>
    <type>Checkbox</type>
</CustomField>