force-app/main/default/objects/Tripslog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint</description>
    <inlineHelpText>Endpoint</inlineHelpText>
    <label>Endpoint</label>
    <type>TextArea</type>
</CustomField>