force-app/main/default/objects/Tripslog__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Response</description>
    <inlineHelpText>Response</inlineHelpText>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>